# rosec

./: .gitignore  .syncthing.Cargo.lock.tmp  Cargo.toml  FUTURE.md  Justfile  README.md  release.toml
.github/workflows/: ci.yml  release.yml
.husky/: pre-commit
contrib/aur/: PKGBUILD  PKGBUILD-git  rosec.install
contrib/autostart/: rosecd.desktop
contrib/dbus/: org.freedesktop.secrets.service  org.gnome.keyring.service
contrib/systemd/: rosecd.service  rosecd.socket
docs/: configuration.md  ssh-agent.md
examples/: config.toml
rosec/: Cargo.toml
rosec-bitwarden/: Cargo.toml
rosec-bitwarden-sm/: Cargo.toml
rosec-bitwarden-sm/src/: api.rs  lib.rs
rosec-bitwarden/src/: api.rs  backend.rs  cipher.rs  crypto.rs  error.rs  lib.rs  notifications.rs  oauth_cred.rs  vault.rs
rosec-core/: Cargo.toml
rosec-core/src/: config.rs  config_edit.rs  credential.rs  dedup.rs  lib.rs  machine_key.rs  oauth.rs  prompt.rs  router.rs
rosec-file/: Cargo.toml
rosec-file/src/: backend.rs  crypto.rs  lib.rs  types.rs
rosec-fuse/: Cargo.toml
rosec-fuse/src/: config.rs  fs.rs  lib.rs  naming.rs
rosec-pam/: Cargo.toml
rosec-pam/src/: main.rs
rosec-prompt/: Cargo.toml
rosec-prompt/src/: main.rs
rosec-secret-service/: Cargo.toml
rosec-secret-service/src/: collection.rs  crypto.rs  daemon.rs  item.rs  lib.rs  prompt.rs  server.rs  service.rs  session.rs  session_iface.rs  state.rs  tty.rs  unlock.rs
rosec-secret-service/src/daemon/: management.rs  mod.rs  search.rs  secrets.rs
rosec-ssh-agent/: Cargo.toml
rosec-ssh-agent/src/: keystore.rs  lib.rs  pem.rs  session.rs
rosec-vault/: Cargo.toml
rosec-vault/src/: backend.rs  crypto.rs  lib.rs  types.rs
rosec/src/: main.rs
rosecd/: Cargo.toml
rosecd/src/: bootstrap.rs  main.rs  ssh.rs
