[workspace]
resolver = "2"
members = [
    "rosec-core",
    "rosec-secret-service",
    "rosec-bitwarden",
    "rosecd",
    "rosec",
    "rosec-prompt",
]

[workspace.package]
edition = "2024"
rust-version = "1.93"
license = "MIT"
repository = "https://github.com/jmylchreest/rosec"

[workspace.dependencies]
anyhow = "1.0.97"
thiserror = "2.0.16"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
async-trait = "0.1.86"
zeroize = "1.8.1"
iced = { version = "0.13.1", default-features = false, features = ["tiny-skia"] }
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread", "time", "sync", "signal"] }
toml = "0.8.20"
