[workspace]
resolver = "2"
members = [
    "rosec-core",
    "rosec-secret-service",
    "rosec-bitwarden",
    "rosec-bitwarden-sm",
    "rosecd",
    "rosec",
    "rosec-prompt",
]

[workspace.package]
edition = "2024"
rust-version = "1.93"
license = "MIT"
repository = "https://github.com/jmylchreest/rosec"

[workspace.dependencies]
anyhow = "1.0.97"
thiserror = "2.0.16"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
async-trait = "0.1.86"
zeroize = "1.8.1"
iced = { version = "0.13.1", default-features = false, features = ["tiny-skia"] }
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread", "time", "sync", "signal"] }
toml = "0.8.20"
sha2 = "0.10.9"
aes = "0.8.4"
cbc = { version = "0.1.2", features = ["alloc", "std"] }
hmac = "0.12.1"
hkdf = "0.12.4"
base64 = "0.22.1"
rand = "0.9.2"
block-padding = "0.3.3"
num-bigint = { version = "0.4.6", features = ["rand"] }
getrandom = "0.2.15"
rpassword = "7"
libc = "0.2"
toml_edit = "0.22"
futures-util = "0.3"
wildmatch = "2.6.1"
chrono = { version = "0.4", features = ["serde"] }
