[package]
name = "rosec-bitwarden-sm"
version.workspace = true
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
description = "Bitwarden Secrets Manager backend for rosec"

[dependencies]
rosec-core = { path = "../rosec-core" }
anyhow     = { workspace = true }
chrono     = { workspace = true }
thiserror  = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
tracing    = { workspace = true }
async-trait = { workspace = true }
zeroize    = { workspace = true }
tokio      = { workspace = true }
hkdf       = { workspace = true }
sha2       = { workspace = true }
aes        = { workspace = true }
cbc        = { workspace = true }
hmac       = { workspace = true }
base64     = { workspace = true }

# HTTP client (same config as rosec-bitwarden)
reqwest = { workspace = true }
uuid    = { workspace = true, features = ["serde"] }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
