[package]
name = "rosec-bitwarden"
version = "0.1.0"
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
description = "Bitwarden vault backend for rosec"

[dependencies]
rosec-core = { path = "../rosec-core" }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
zeroize = { workspace = true }
tokio = { workspace = true }

# HTTP client
reqwest = { version = "0.12.28", default-features = false, features = ["json", "rustls-tls"] }

# Crypto
aes = "0.8.4"
cbc = { version = "0.1.2", features = ["alloc", "std"] }
block-padding = "0.3.3"
hmac = "0.12.1"
sha2 = "0.10.9"
sha1 = "0.10.6"
pbkdf2 = "0.12.2"
argon2 = "0.5.3"
hkdf = "0.12.4"
rsa = "0.9.9"
pkcs8 = { version = "0.10.2", features = ["pkcs5", "encryption"] }
base64 = "0.22.1"
rand = "0.9.2"
uuid = { version = "1.17.0", features = ["v4"] }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
