[package]
name = "rosec-bitwarden"
version.workspace = true
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
description = "Bitwarden vault backend for rosec"

[dependencies]
rosec-core = { path = "../rosec-core" }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
zeroize = { workspace = true }
tokio = { workspace = true }

# Real-time notifications (own minimal SignalR client over reqwest + tokio-websockets)
tokio-websockets = { version = "0.13.1", default-features = false, features = ["client", "rustls-platform-verifier", "sha1_smol", "fastrand"] }
futures-util = { workspace = true }
http = "1"

# HTTP client
reqwest = { workspace = true }

# Crypto
aes = { workspace = true }
cbc = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
sha1 = "0.10.6"
pbkdf2 = "0.12.2"
argon2 = "0.5.3"
hkdf = { workspace = true }
rsa = "0.9.10"
pkcs8 = { version = "0.10.2", features = ["pkcs5", "encryption"] }
base64 = { workspace = true }
rand = { workspace = true }
block-padding = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
