[package]
name = "rosec-core"
version.workspace = true
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
toml_edit = { workspace = true }
tracing = { workspace = true }
zeroize = { workspace = true }

# Credential storage crypto
aes = { workspace = true }
cbc = { workspace = true }
block-padding = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
rand = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
