[package]
name = "rosec-prompt"
version.workspace = true
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
anyhow = { workspace = true }
iced = { workspace = true }
rpassword = { workspace = true }
rosec-core = { path = "../rosec-core" }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
zeroize = { workspace = true }
