[package]
name = "rosec-secret-service"
version.workspace = true
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
rosec-core = { path = "../rosec-core" }
rosec-vault = { path = "../rosec-vault" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
zeroize = { workspace = true }
tokio = { workspace = true }
zbus = { workspace = true }
zvariant = { workspace = true }
uuid = { workspace = true }
sha2 = { workspace = true }
aes = { workspace = true }
cbc = { workspace = true }
hkdf = { workspace = true }
num-bigint = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }
libc = { workspace = true }
wildmatch = { workspace = true }
