[package]
name = "rosec-ssh-agent"
version.workspace = true
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
description = "SSH agent for rosec — serves vault SSH keys over the OpenSSH agent protocol"

[dependencies]
rosec-core = { path = "../rosec-core" }
anyhow     = { workspace = true }
thiserror  = { workspace = true }
tracing    = { workspace = true }
zeroize    = { workspace = true }
tokio      = { workspace = true, features = ["net", "io-util"] }
libc       = { workspace = true }
signature  = "2"

# SSH agent protocol
ssh-agent-lib = { workspace = true }

# SSH key parsing and signing
ssh-key = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
