[package]
name = "rosec"
version = "0.1.0"
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }
zbus = { workspace = true }
zvariant = { workspace = true }
libc = { workspace = true }
rosec-core = { path = "../rosec-core" }
toml_edit = { workspace = true }
zeroize = { workspace = true }
sha2 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
wildmatch = { workspace = true }
futures-util = { workspace = true }
tracing = { workspace = true }
