[package]
name = "rosecd"
version = "0.1.0"
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
anyhow = { workspace = true }
rosec-core = { path = "../rosec-core" }
rosec-bitwarden = { path = "../rosec-bitwarden" }
rosec-bitwarden-sm = { path = "../rosec-bitwarden-sm" }
rosec-secret-service = { path = "../rosec-secret-service" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
zeroize = { workspace = true }
zbus = { workspace = true }
futures-util = { workspace = true }
notify = { workspace = true }
libc = { workspace = true }
